# emb_perception

./: CMakeLists.txt  README.md
include/common/: common_headers.hpp
include/detection/: detection.hpp  object_detection.hpp  od_utils.hpp  tflite_object_detection.hpp  torch_object_detection.hpp
models/: labels.txt  od_model.tflite
src/: main.cpp
src/detection/: detection.cpp  od_utils.cpp  tflite_object_detection.cpp  torch_object_detection.cpp
